tests/with/with.exp
Error ------------------------------------------------------------------------------------------------- nonstrict.js:3:1

Flow doesn't support `with` statements. [unsupported-syntax]

      v------------------
   3| with (o) { // ERROR
   4| }
      ^


Error ---------------------------------------------------------------------------------------------------- strict.js:5:1

Strict mode code may not include a with statement

      v--------------------------------
   5| with (o) { // ERROR (parse error)
   6| }
      ^



Found 2 errors
